Actualización Nueva Tabla. Ingresa Al Proyecto La Tabla Tipo Empaque.
1.Tiene Solo Dos Campos (id, desc_tipo_empaque).
2.Nuevos Registros en el Archivo Routing.
3.Registro del JavaScript para Ejecutar el Eliminar tanto en Masa Como Individual, esto en el Archivo VIEW.YML

--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -6,7 +6,8 @@ dictionary:
     pass:                 Contraseña
     register:             Registrar
     update:               Actualizar
-  errors:
+    desc:                 Descripción
+    errors:
     00001:                El módulo y la acción solicitada, no existe.
     00002:                La dirección que solicita no está registrada.
     00003:                Los datos de usuario y contrseña son inválidos.
