Implementación de Los Videos Presentados en Formación en la Tabla Tipo Empaque.
1.Cambio en el routing en formato de salida del Eliminar.
2. se agrego Titulo a la Tabla en el View.
2. aparece un nuevo archivo en VIEW llamado deleteTemplate.json.php.
3. nuevo mensaje de actualizacion exitosa en el diccionario y en el archivo updateActionClass.

--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -17,6 +17,7 @@ dictionary:
     delete:               Eliminar
     deleteSelect:         Eliminar Seleccionados
     successfulRegister:   El Registro Fue Exitoso.
+    successfulUpdate:     La Actualización Fue Exitosa.
     failureToRegister:    Algo Fallo Al Registrar.
     successfulDelete:     La Eliminación Fue Exitosa.
     failureToDelete:      Algo Fallo Al Eliminar. 
