Nuevas Palabras En El Diccionario.
Tablas Usuario y Tipo Empaque con full Diccionario.

--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -2,7 +2,10 @@
 culture:                  Español
 dictionary:
   default:
+    id:                   Id
     user:                 Usuario
+    created:              Creado
+    actived:              Activado
     pass:                 Contraseña
     register:             Registrar
     update:               Actualizar
