Implementacion de TipoId:
1. Se registra en Routing.
2. Creacion de tablas y bases de las tablas.

--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -9,6 +9,7 @@ dictionary:
     pass:                 Contraseña
     register:             Registrar
     update:               Actualizar
+    updated:              Actualizado
     desc:                 Descripción
     actions:              Acciones
     typePacking:          Tipo Empaque
