--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -24,7 +24,9 @@ dictionary:
     employeeLastName:     Apellido Empleado
     phone:                Telefono
     direction:            Direccion
+    numberIdentification: Numero de Identificacion
     credential:           Credencial
+    nameCredential:       Nombre Credencial
     mail:                 Correo
     confirmDelete:        Confirmar Eliminar
     confirmDeleteMass:    Confirmar La Eliminación de Elementos Seleccionados.
@@ -41,12 +43,12 @@ dictionary:
     failureToRegister:    Algo Fallo Al Registrar.
     successfulDelete:     La Eliminación Fue Exitosa.
     failureToDelete:      Algo Fallo Al Eliminar. 
-    errors:
+  errors:
     00001:                El módulo y la acción solicitada, no existe.
     00002:                La dirección que solicita no está registrada.
     00003:                Los datos de usuario y contrseña son inválidos.
-    00001:  Lo que buscas no existe
-    10001:  Existe un error en la definición de los includes
-    10002:  No hay definido un ambito (dev o prod) para la aplicación
-    10003:  El arhivo %file% no existe
-    10004:  El directorio %path% no pudo ser creado
+    00001:                Lo que buscas no existe
+    10001:                Existe un error en la definición de los includes
+    10002:                No hay definido un ambito (dev o prod) para la aplicación
+    10003:                El arhivo %file% no existe
+    10004:                El directorio %path% no pudo ser creado
