subo la tabla insumo  con la respectivos archivos ingresado
en el routing, view, es.yml  ingreso nuevas datos  para que las tengan en cuenta

--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -119,6 +119,13 @@ dictionary:
     nit:                  NIT
     ##---------------------- EMPRESA----------------------------##
     
+    ##---------------------- INSUMO----------------------------##
+    input:                insumo
+    descriptionInput:     descripción de insumo
+    price:                precio
+    IdentificatiOfInpuType: tipo id insumo
+    ##---------------------- INSUMo----------------------------##
+    
     
     ##-------------------------- ERRORES --------------------##
   errors:
