Actualizacion de Diccionario i18n 1. Nuevas palabras en el diccionario entre ellas las acciones y el nombre de la tabla.

--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -137,6 +137,7 @@ dictionary:
     ##---------------------- EMPAQUE----------------------------##
     packing:              Empaque
     informationPacking:   Información de Empaque
+    IdPacking:            Identificación del Empaque
     editPacking:          Editar Empaque
     newPacking:           Nuevo Empaque
     ##---------------------- EMPAQUE----------------------------##
