Organizacion de titulos. Se arreglo el eliminar masivo implementado. se agrego los nombres en el index y el view en lugar del id

--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -176,11 +176,12 @@ dictionary:
     reducingSugars:      azucares reductores
     saccharose:           sacarosa
     purity:               pureza
-    idEmployed:          id empleado
-    idProvider:          id proveedor
+    idEmployed:           empleado
+    idProvider:           proveedor
     qualityControl:      Control Calidad
-    EditQualityControl:  Editar Control Calidad
+    editQualityControl:  Editar Control Calidad
     qualityControlInformation: Informacion De Control Calidad
+    newQualityControl:   Nuevo Control Calidad
     ##-----------------control calidad---------------------------##
      
     ##---------------------- DETALLE EMPAQUE----------------------------##
