IMPLEMENTACION DE IDIOMA A TABLA EMPLEADO SE AÑADE ARCHIVO DE PALABRAS EN INGLES EN EL I18N

--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -3,6 +3,7 @@ culture:                  English
 dictionary:
   default:
     ##----------------------SISTEMA-------------------------##
+    SantaHelena:          Santa Helena
     register:             Register
     created:              Created
     actived:              Actived
