--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -3,6 +3,7 @@ culture:                  Español
 dictionary:
   default:
     ##----------------------SISTEMA-------------------------##
+    SantaHelena:          Santa Helena
     register:             Registrar
     created:              Creado
     actived:              Activado
