implementacion de filtros y pajinacion  en la tabla insumo

--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -145,6 +145,7 @@ dictionary:
     ##---------------------- INSUMO----------------------------##
     input:                Input
     descriptionInput:     Description Input
+    description:          Description
     newInput:             New Input
     editInput:            Edit Input
     infoInput:            Information Input
