--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -128,6 +128,8 @@ dictionary:
     employeeLastName:     Apellido Empleado
     newEmployee:          Nuevo Empleado
     editEmployee:         Editar Empleado
+    generate:             Generar
+    generate report:      Generar Reporte
     ##-------------------------- EMPLEADO-----------------------##
     
     ##---------------------- TIPO IDENTIFICACION----------------##
