entrada bodega Reporte Cristian Ramirez insumos Jefry

--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -28,6 +28,9 @@ dictionary:
     back:                 Back
     delete:               Delete
     detail:               Detail
+    enlist:               Enlist
+    start:                Start
+    end:                  End
     deleteSelect:         Remove Selected
     successfulRegister:   The Register Was Successful.
     successfulUpdate:     Update Was Successful.
